--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,22 +4,51 @@
     justify-content: center;
   }
   
-  .box-item {
+.box-item {
     padding: 1rem;
   }
   
-  .nav-link {
+.nav-link {
     font-size: 1em;
   }
   
-  .nav-bar {
+.nav-bar {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   }
   
-  .logo-main {
+.logo-main {
     height: 90px;
   }
   
+.jumbo-main {
+  display: flex;
+  flex-direction: column;
+  height: 60vh;
+  width: 100vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url('https://bookpetsitting.com/wp-content/uploads/2021/10/shutterstock_285751451-resized.jpg.webp');
+}
+
+.jumbo-head-text {
+
+  }
+
+.jumbo-content {
+
+  }
+.jumbo-content-text {
+
+  }
+
+.jumbo-main-img {
+  background-size: cover;
+}
+
+.bttn-large {
+  border-radius: 2px;
+  background-color: ;
+}
   ul {
   
     list-style: none;
