--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,13 @@ p {
   font-size: 1.2rem;
   word-wrap: break-word;
 }
+.footer {
+  background-color: #333;
+  text-align: center;
+  height: 30vh;
+  width: 100%;
+  color: #fff;
+}
 .mid {
   padding-top: 3%;
   padding-left: 20%;
@@ -21,7 +28,7 @@ p {
   padding: 1em;
 }
 .content-box {
-  background-color: #C5C5C5;
+  background-color: #e8ebed;
 }
 .content {
   display: flex;
