Added functionality to let user know form has been sent or not.  Needs further additions for displaying errors in a user friendly way

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,6 +51,16 @@ tr:hover {background-color: wheat;}
 .about-you-form-content {
 } */
 
+.alert-box {
+  font-size: large;
+}
+
+.alert-success {
+  color: aquamarine;
+}
+.alert-danger {
+  color: red;
+}
 
 
 .locations {
