--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -219,11 +219,11 @@ padding: 0.2rem;
 }
 
 .jumbo-main-landing {
-  background-image: url('https://res.cloudinary.com/dbg1cm3ro/image/upload/v1666376378/jumbo_q32mz5.webp');
+  background-image: url('https://res.cloudinary.com/dbg1cm3ro/image/upload/v1666376378/purrfect-paws/jumbo_q32mz5.webp');
 }
 
 .jumbo-main-contact-us {
-  background-image: url('https://res.cloudinary.com/dbg1cm3ro/image/upload/v1666579995/dogs-3-large_hzs1s5.webp');
+  background-image: url('https://res.cloudinary.com/dbg1cm3ro/image/upload/v1666579995/purrfect-paws/dogs-3-large_hzs1s5.webp');
   background-position: 20% 20%;
   opacity: 80%;
 }
@@ -257,6 +257,31 @@ padding: 0.2rem;
   border-style: none;
   cursor: pointer;
   font-size: .9em;
+}
+
+.pet-sitter-avatar {
+  width: 90px;
+  height: 120px;
+}
+
+.pet-sitter-select {
+  padding: 20px;
+}
+.pet-sitter-select:hover {
+  background-color: #d3d3d3;
+  cursor: pointer;
+}
+
+.pet-sitter-select-box {
+  text-align: center;
+}
+
+.selected {
+  background-color: #99ff99;
+}
+
+.unselected {
+  background-color: #fff;
 }
   ul {
   
